Display cart grand total

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,3 @@
 - add an id attribute on product table rows in products page
-- Activer le lien vers le panier
-- Afficher le nombre d'articles dans le panier
-- Panier vide
+- uniformiser les ids html
 
