o When testing url path in views unit tests, match the entire path. o Started work on cart checkout: can continue shopping from cart page

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
 - add an id attribute on product table rows in products page
 - uniformiser les ids html
+- se fabriquer un tool velocity pour construire les urls dans les pages (voir classe PathFor)
 
