--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 - add an id attribute on product table rows in products page
 - uniformiser les ids html
 - se fabriquer un tool velocity pour construire les urls dans les pages (voir classe PathFor)
+(voir possibilité d'utiliser les tools velocity existants) 
 
