First pass at order confirmation and paiement

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+- découper en sous-domaines
+- revoir le nommage des méthodes de création des matchers jmock dans tous les tests
 - add an id attribute on product table rows in products page
 - uniformiser les ids html
 - se fabriquer un tool velocity pour construire les urls dans les pages (voir classe PathFor)
