--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+- drop usage of ModelAndView and ModelMap in favor of Model
 - add an id attribute on product table rows in products page
 - uniformiser les ids html
 - se fabriquer un tool velocity pour construire les urls dans les pages (voir classe PathFor)
