Upgraded to hamcrest-matchers-1.2 release

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
 o Upgrade to log4.xml
 o See if we can switch to logback without too much pain
+o Experiment with java config
+o Experiment with externalized hibernate config
 
