--- a/TODO.txt
+++ b/TODO.txt
@@ -2,4 +2,5 @@ o Upgrade to log4.xml
 o See if we can switch to logback without too much pain
 o Experiment with java config
 o Experiment with externalized hibernate config
+o Velocity macros form helpers
 
