--- a/TODO.txt
+++ b/TODO.txt
@@ -2,4 +2,5 @@ o Upgrade to log4j.xml
 o See if we can switch to logback without too much pain
 o Experiment with externalized hibernate config
 o Velocity macros form helpers
+o Switch to windowlicker-web
 
